# routes/posts.js
@@ -9,7 +9,7 @@ router.get(
   isAuth,
   PostsController.getPosts,
   /**
-   * #swagger.tags = ['用戶 - 貼文 (Posts)']
+   * #swagger.tags = ['動態貼文 - 貼文']
    * #swagger.description = '取得全部貼文 API'
    * #swagger.security = [{
       "apiKeyAuth": []
@@ -41,6 +41,9 @@ router.get(
         ]
       }
     }
+   * #swagger.responses[400] = {
+      description: 'Bad Request'
+    }
   */
 );
 
@@ -49,7 +52,7 @@ router.post(
   isAuth,
   handleErrorAsync(PostsController.createPost),
   /**
-   * #swagger.tags = ['用戶 - 貼文 (Posts)']
+   * #swagger.tags = ['動態貼文 - 貼文']
    * #swagger.description = '新增貼文 API'
    * #swagger.security = [{
       "apiKeyAuth": []
@@ -83,7 +86,7 @@ router.patch(
   isAuth,
   handleErrorAsync(PostsController.updatePost),
   /**
-   * #swagger.tags = ['用戶 - 貼文 (Posts)']
+   * #swagger.tags = ['動態貼文 - 貼文']
    * #swagger.description = '更新指定貼文 API'
    * #swagger.security = [{
       "apiKeyAuth": []
@@ -117,7 +120,7 @@ router.delete(
   isAuth,
   PostsController.deleteAllPost,
   /**
-   * #swagger.tags = ['用戶 - 貼文 (Posts)']
+   * #swagger.tags = ['動態貼文 - 貼文']
    * #swagger.description = '刪除全部貼文 API'
    * #swagger.security = [{
       "apiKeyAuth": []
@@ -137,7 +140,7 @@ router.delete(
   isAuth,
   handleErrorAsync(PostsController.deletePost),
   /**
-   * #swagger.tags = ['用戶 - 貼文 (Posts)']
+   * #swagger.tags = ['動態貼文 - 貼文']
    * #swagger.description = '刪除指定貼文 API'
    * #swagger.security = [{
       "apiKeyAuth": []
@@ -150,6 +153,106 @@ router.delete(
       }
     }
    */
+);
+
+// 貼文按讚
+router.post(
+  '/:id/like',
+  isAuth,
+  handleErrorAsync(PostsController.likePost),
+  /**
+   * #swagger.tags = ['動態貼文 - 按讚']
+   * #swagger.description = '按一則貼文的讚 API'
+   * #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+    * #swagger.responses[200] = {
+      description: '貼文按讚成功',
+      schema: {
+        "status": true,
+        "message": "貼文按讚成功",
+      }
+    }
+    * #swagger.responses[404] = {
+      description: '查無此貼文 id',
+      schema: {
+        "status": false,
+        "message": "查無此貼文 id",
+      }
+    }
+  */
+);
+// 取消貼文按讚
+router.delete(
+  '/:id/unlike',
+  isAuth,
+  handleErrorAsync(PostsController.unlikePost),
+  /**
+   * #swagger.tags = ['動態貼文 - 按讚']
+   * #swagger.description = '取消指定貼文的讚 API'
+   * #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+    * #swagger.responses[200] = {
+      description: '貼文按讚已取消',
+      schema: {
+        "status": true,
+        "message": "貼文按讚已取消",
+      }
+    }
+    * #swagger.responses[404] = {
+      description: '查無此貼文 id',
+      schema: {
+        "status": false,
+        "message": "查無此貼文 id",
+      }
+    }
+  */
+);
+// 取得個人所有貼文列表
+router.get(
+  '/user/:id',
+  isAuth,
+  handleErrorAsync(PostsController.getUserPosts),
+  /**
+   * #swagger.tags = ['動態貼文 - 貼文']
+   * #swagger.description = '取得個人貼文列表 API'
+   * #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+    * #swagger.responses[200] = {
+      description: 'OK',
+      schema: {
+        "status": true,
+        "message": "查詢成功",
+        "data": [
+          {
+            "_id": "664c185bcd3fb...",
+            "user": "664c185bcd3fb...",
+            "content": "example",
+            "image": "圖片連結(https)",
+            "likes": [
+              {
+                "_id": "664c185bcd3fb...",
+                "name": "example",
+                "photo": "圖片連結(https)"
+              },
+            ],
+            "comments": 0,
+            "tags": [
+              "example"
+            ],
+            "isPublic": true,
+            "createdAt": "2024...",
+            "updatedAt": "2024..."
+          },
+        ]
+      }
+    }
+    * #swagger.responses[400] = {
+      description: 'Bad Request'
+    }
+  */
 );
 
 module.exports = router;
